--- a/peor2.html
+++ b/peor2.html
@@ -283,7 +283,7 @@
         <div class="options">
             <h3>Después de conocer estas historias, ¿cómo te sientes?</h3>
             <button class="option-btn better-btn" onclick="window.location.href='Mejor.html'">Me siento mejor</button>
-            <button class="option-btn worse-btn" onclick="window.location.href='peor3.html'">Me siento peor</button>
+            <button class="option-btn worse-btn" onclick="window.location.href='Peor3.html'">Me siento peor</button>
         </div>
     </div>
 
